--- a/index.html
+++ b/index.html
@@ -5,32 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Paygo - حجز الفنادق</title>
 
-  <!-- أيقونات الموقع -->
   <link rel="apple-touch-icon" href="apple-touch-icon.png" sizes="180x180">
   <link rel="icon" type="image/png" sizes="32x32" href="apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="16x16" href="apple-touch-icon.png">
-
-  <!-- Bootstrap RTL -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css" rel="stylesheet">
 
-  <!-- استدعاء الخط المخصص -->
   <style>
     @font-face {
-      font-family: 'HacenTunisia';
+      font-family: 'Hacen';
       src: url('hacen.ttf') format('truetype');
-      font-weight: normal;
-      font-style: normal;
-    }
-
-    * {
-      font-family: 'HacenTunisia', sans-serif !important;
     }
 
     html, body {
       min-height: 100vh;
       margin: 0;
       padding: 0;
-      background-color: #f2f2f2; /* رمادي مائل للابيض */
+      background-color: #f2f2f2;
+      font-family: 'Hacen', sans-serif;
+      direction: rtl;
       color: #000;
     }
 
@@ -52,49 +44,14 @@
       flex: 1;
     }
 
-    .destination-card {
-      background: #2a2a2a;
+    .footer {
+      background-color: #222;
       color: #fff;
-      border-radius: 12px;
-      padding: 10px;
       text-align: center;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.3);
-      height: 100%;
+      padding: 12px;
     }
 
-    .destination-card img {
-      width: 100%;
-      border-radius: 8px;
-      height: 120px;
-      object-fit: cover;
-    }
-
-    .destination-card h5 {
-      margin-top: 10px;
-    }
-
-    .ad-slide {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      opacity: 0;
-      transition: opacity 2s ease-in-out;
-    }
-
-    .ad-slide.active {
-      opacity: 1;
-      z-index: 1;
-    }
-
-    .fade img {
-      width: 100%;
-      height: 150px;
-      object-fit: cover;
-      border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-    }
-
+    /* ساعات */
     .clock-circle {
       position: relative;
       width: 100px;
@@ -120,26 +77,36 @@
     .minute { width: 3px; height: 35px; }
     .second { width: 2px; height: 40px; }
 
-    .number span {
+    .clock-circle .number {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      text-align: center;
+      font-size: 10px;
+      color: #333;
+    }
+
+    .clock-circle .number span {
       position: absolute;
       transform: translate(-50%, -50%);
-      font-size: 10px;
     }
 
-    .footer {
-      background-color: #222;
-      color: #fff;
+    .city-label {
       text-align: center;
-      padding: 12px;
+      margin-top: 8px;
+      font-weight: bold;
     }
 
+    /* التسويق */
     .marketing-box {
-      background-color: rgba(255, 255, 255, 0.85);
-      padding: 25px;
+      padding: 25px 20px;
       border-radius: 12px;
     }
 
     .marketing-item {
+      display: flex;
+      align-items: center;
+      gap: 15px;
       margin-bottom: 25px;
     }
 
@@ -147,10 +114,43 @@
       margin-bottom: 0;
     }
 
-    .marketing-icon {
-      width: 48px;
-      height: 48px;
-      margin-right: 10px;
+    .marketing-item img {
+      width: 40px;
+      height: 40px;
+      flex-shrink: 0;
+    }
+
+    .marketing-text h5 {
+      font-size: 18px;
+      margin-bottom: 5px;
+      white-space: nowrap;
+    }
+
+    .marketing-text p {
+      margin: 0;
+      font-size: 14px;
+      color: #333;
+    }
+
+    .destination-card {
+      background: #2a2a2a;
+      color: #fff;
+      border-radius: 12px;
+      padding: 10px;
+      text-align: center;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+      height: 100%;
+    }
+
+    .destination-card img {
+      width: 100%;
+      border-radius: 8px;
+      height: 120px;
+      object-fit: cover;
+    }
+
+    .destination-card h5 {
+      margin-top: 10px;
     }
   </style>
 </head>
@@ -161,102 +161,95 @@
     <img src="paygs.gif" alt="Paygo Logo">
   </div>
 
-  <!-- المحتوى -->
-  <div class="main-content">
+  <!-- المحتوى الرئيسي -->
+  <div class="main-content container py-4">
 
-    <!-- إعلانات -->
+    <!-- الساعات -->
+    <div class="row text-center g-4 justify-content-center">
+
+      <!-- لندن -->
+      <div class="col-4">
+        <div class="clock-circle" id="clock-london">
+          <div class="number">
+            <span style="top: 10%; left: 50%;">12</span>
+            <span style="top: 20%; left: 75%;">1</span>
+            <span style="top: 35%; left: 90%;">2</span>
+            <span style="top: 50%; left: 95%;">3</span>
+            <span style="top: 65%; left: 90%;">4</span>
+            <span style="top: 80%; left: 75%;">5</span>
+            <span style="top: 90%; left: 50%;">6</span>
+            <span style="top: 80%; left: 25%;">7</span>
+            <span style="top: 65%; left: 10%;">8</span>
+            <span style="top: 50%; left: 5%;">9</span>
+            <span style="top: 35%; left: 10%;">10</span>
+            <span style="top: 20%; left: 25%;">11</span>
+          </div>
+          <div class="hand hour" id="hour-london"></div>
+          <div class="hand minute" id="minute-london"></div>
+          <div class="hand second" id="second-london"></div>
+        </div>
+        <div class="city-label">لندن</div>
+      </div>
+
+      <!-- طوكيو -->
+      <div class="col-4">
+        <div class="clock-circle" id="clock-tokyo">
+          <div class="number">...</div>
+          <div class="hand hour" id="hour-tokyo"></div>
+          <div class="hand minute" id="minute-tokyo"></div>
+          <div class="hand second" id="second-tokyo"></div>
+        </div>
+        <div class="city-label">طوكيو</div>
+      </div>
+
+      <!-- الرياض -->
+      <div class="col-4">
+        <div class="clock-circle" id="clock-riyadh">
+          <div class="number">...</div>
+          <div class="hand hour" id="hour-riyadh"></div>
+          <div class="hand minute" id="minute-riyadh"></div>
+          <div class="hand second" id="second-riyadh"></div>
+        </div>
+        <div class="city-label">الرياض</div>
+      </div>
+    </div>
+
+    <!-- الجمل التسويقية -->
     <div class="container my-4">
-      <div id="ad-slider" style="position:relative;height:150px;border-radius:12px;overflow:hidden;">
-        <div class="ad-slide fade active"><img src="ad1.png" alt="إعلان 1"></div>
-        <div class="ad-slide fade"><img src="ad2.png" alt="إعلان 2"></div>
-        <div class="ad-slide fade"><img src="ad3.png" alt="إعلان 3"></div>
+      <div class="marketing-box">
+
+        <div class="marketing-item">
+          <img src="icon1.png" alt="icon1">
+          <div class="marketing-text">
+            <h5><strong>استكشف العالم من مكانك</strong></h5>
+            <p>اكتشف أفضل المدن السياحية والفنادق والمطاعم المختارة بعناية من كل قارة.</p>
+          </div>
+        </div>
+
+        <div class="marketing-item">
+          <img src="icon2.png" alt="icon2">
+          <div class="marketing-text">
+            <h5><strong>سافر بعقلك أولاً… ثم قرر!</strong></h5>
+            <p>شاهد صور الوجهات، تعرف على أبرز المعالم، وتصفح تقييمات الفنادق والمطاعم بدون عناء.</p>
+          </div>
+        </div>
+
+        <div class="marketing-item">
+          <img src="icon3.png" alt="icon3">
+          <div class="marketing-text">
+            <h5><strong>كل ما تحتاجه قبل السفر</strong></h5>
+            <p>دليلك الكامل لأجمل الوجهات، مع معلومات مفصلة تساعدك في التخطيط لرحلتك بثقة.</p>
+          </div>
+        </div>
+
       </div>
     </div>
 
-    <!-- الساعات العالمية -->
-    <div class="container my-5">
-      <div class="row text-center g-4 justify-content-center">
-        <!-- تكرار 3 ساعات -->
-        <!-- الرياض -->
-        <div class="col-4">
-          <div class="clock-circle" id="clock-riyadh">
-            <div class="number">
-              <span style="top: 10%; left: 50%;">12</span>
-              <span style="top: 50%; left: 95%;">3</span>
-              <span style="top: 90%; left: 50%;">6</span>
-              <span style="top: 50%; left: 5%;">9</span>
-            </div>
-            <div class="hand hour" id="hour-riyadh"></div>
-            <div class="hand minute" id="minute-riyadh"></div>
-            <div class="hand second" id="second-riyadh"></div>
-          </div>
-          <div class="city-label">الرياض</div>
-        </div>
-        <!-- طوكيو -->
-        <div class="col-4">
-          <div class="clock-circle" id="clock-tokyo">
-            <div class="number">
-              <span style="top: 10%; left: 50%;">12</span>
-              <span style="top: 50%; left: 95%;">3</span>
-              <span style="top: 90%; left: 50%;">6</span>
-              <span style="top: 50%; left: 5%;">9</span>
-            </div>
-            <div class="hand hour" id="hour-tokyo"></div>
-            <div class="hand minute" id="minute-tokyo"></div>
-            <div class="hand second" id="second-tokyo"></div>
-          </div>
-          <div class="city-label">طوكيو</div>
-        </div>
-        <!-- لندن -->
-        <div class="col-4">
-          <div class="clock-circle" id="clock-london">
-            <div class="number">
-              <span style="top: 10%; left: 50%;">12</span>
-              <span style="top: 50%; left: 95%;">3</span>
-              <span style="top: 90%; left: 50%;">6</span>
-              <span style="top: 50%; left: 5%;">9</span>
-            </div>
-            <div class="hand hour" id="hour-london"></div>
-            <div class="hand minute" id="minute-london"></div>
-            <div class="hand second" id="second-london"></div>
-          </div>
-          <div class="city-label">لندن</div>
-        </div>
-      </div>
-    </div>
-
-    <!-- جمل تسويقية -->
-    <div class="container my-5 marketing-box">
-      <div class="marketing-item d-flex align-items-start">
-        <img src="icon1.png" alt="icon1" class="marketing-icon">
-        <div>
-          <h6 class="fw-bold mb-1">استكشف العالم من مكانك</h6>
-          <p class="mb-0">اكتشف أفضل المدن السياحية والفنادق والمطاعم المختارة بعناية من كل قارة.</p>
-        </div>
-      </div>
-      <div class="marketing-item d-flex align-items-start">
-        <img src="icon2.png" alt="icon2" class="marketing-icon">
-        <div>
-          <h6 class="fw-bold mb-1">سافر بعقلك أولاً… ثم قرر!</h6>
-          <p class="mb-0">شاهد صور الوجهات، تعرف على أبرز المعالم، وتصفح تقييمات الفنادق والمطاعم بدون عناء.</p>
-        </div>
-      </div>
-      <div class="marketing-item d-flex align-items-start">
-        <img src="icon3.png" alt="icon3" class="marketing-icon">
-        <div>
-          <h6 class="fw-bold mb-1">كل ما تحتاجه قبل السفر</h6>
-          <p class="mb-0">دليلك الكامل لأجمل الوجهات، مع معلومات مفصلة تساعدك في التخطيط لرحلتك بثقة.</p>
-        </div>
-      </div>
-    </div>
-
-    <!-- وجهات -->
+    <!-- الوجهات -->
     <div class="container destinations">
       <div class="row g-3">
         <div class="col-6"><div class="destination-card"><img src="qairo.png"><h5>القاهرة</h5></div></div>
         <div class="col-6"><div class="destination-card"><img src="dubai.png"><h5>دبي</h5></div></div>
-        <div class="col-6"><div class="destination-card"><img src="thailand.png"><h5>تايلاند</h5></div></div>
-        <div class="col-6"><div class="destination-card"><img src="istanbul.png"><h5>إسطنبول</h5></div></div>
       </div>
     </div>
 
@@ -267,17 +260,8 @@
     جميع الحقوق محفوظة © Paygo 2025
   </div>
 
-  <!-- سكربت الساعات والإعلانات -->
+  <!-- JavaScript للساعات -->
   <script>
-    let adIndex = 0;
-    const ads = document.querySelectorAll('.ad-slide');
-    function showNextAd() {
-      ads[adIndex].classList.remove('active');
-      adIndex = (adIndex + 1) % ads.length;
-      ads[adIndex].classList.add('active');
-    }
-    setInterval(showNextAd, 10000);
-
     const clocks = [
       { city: 'london', zone: 'Europe/London' },
       { city: 'tokyo', zone: 'Asia/Tokyo' },
@@ -291,6 +275,7 @@
         const hourDeg = (time.getHours() % 12) * 30 + time.getMinutes() * 0.5;
         const minuteDeg = time.getMinutes() * 6;
         const secondDeg = time.getSeconds() * 6;
+
         document.getElementById(`hour-${clock.city}`).style.transform = `rotate(${hourDeg}deg)`;
         document.getElementById(`minute-${clock.city}`).style.transform = `rotate(${minuteDeg}deg)`;
         document.getElementById(`second-${clock.city}`).style.transform = `rotate(${secondDeg}deg)`;
@@ -300,6 +285,5 @@
     updateAnalogClocks();
     setInterval(updateAnalogClocks, 1000);
   </script>
-
 </body>
 </html>
