--- a/index.html
+++ b/index.html
@@ -213,88 +213,108 @@
     </div>
 
     <!-- الساعات -->
-    <div class="container my-5">
-      <div class="row text-center g-4 justify-content-center">
-        <!-- لندن -->
-        <div class="col-4">
-          <div class="clock-circle" id="clock-london">
-            <div class="number">
-              <span style="top:10%; left:50%;">12</span>
-              <span style="top:20%; left:75%;">1</span>
-              <span style="top:35%; left:90%;">2</span>
-              <span style="top:50%; left:95%;">3</span>
-              <span style="top:65%; left:90%;">4</span>
-              <span style="top:80%; left:75%;">5</span>
-              <span style="top:90%; left:50%;">6</span>
-              <span style="top:80%; left:25%;">7</span>
-              <span style="top:65%; left:10%;">8</span>
-              <span style="top:50%; left:5%;">9</span>
-              <span style="top:35%; left:10%;">10</span>
-              <span style="top:20%; left:25%;">11</span>
-            </div>
-            <div class="hand hour" id="hour-london"></div>
-            <div class="hand minute" id="minute-london"></div>
-            <div class="hand second" id="second-london"></div>
-          </div>
-          <div class="city-label">لندن</div>
+<div class="container my-5">
+  <div class="row text-center g-4 justify-content-center">
+    <!-- لندن -->
+    <div class="col-4">
+      <div class="clock-circle" id="clock-london">
+        <div class="number">
+          <span style="top:10%; left:50%;">12</span>
+          <span style="top:20%; left:75%;">1</span>
+          <span style="top:35%; left:90%;">2</span>
+          <span style="top:50%; left:95%;">3</span>
+          <span style="top:65%; left:90%;">4</span>
+          <span style="top:80%; left:75%;">5</span>
+          <span style="top:90%; left:50%;">6</span>
+          <span style="top:80%; left:25%;">7</span>
+          <span style="top:65%; left:10%;">8</span>
+          <span style="top:50%; left:5%;">9</span>
+          <span style="top:35%; left:10%;">10</span>
+          <span style="top:20%; left:25%;">11</span>
         </div>
-
-        <!-- طوكيو -->
-        <div class="col-4">
-          <div class="clock-circle" id="clock-tokyo">
-            <div class="number">
-              <span style="top:10%; left:50%;">12</span>
-              <!-- باقي الأرقام مثل لندن -->
-            </div>
-            <div class="hand hour" id="hour-tokyo"></div>
-            <div class="hand minute" id="minute-tokyo"></div>
-            <div class="hand second" id="second-tokyo"></div>
-          </div>
-          <div class="city-label">طوكيو</div>
-        </div>
-
-        <!-- الرياض -->
-        <div class="col-4">
-          <div class="clock-circle" id="clock-riyadh">
-            <div class="number">
-              <span style="top:10%; left:50%;">12</span>
-              <!-- باقي الأرقام مثل لندن -->
-            </div>
-            <div class="hand hour" id="hour-riyadh"></div>
-            <div class="hand minute" id="minute-riyadh"></div>
-            <div class="hand second" id="second-riyadh"></div>
-          </div>
-          <div class="city-label">الرياض</div>
-        </div>
+        <div class="hand hour" id="hour-london"></div>
+        <div class="hand minute" id="minute-london"></div>
+        <div class="hand second" id="second-london"></div>
       </div>
+      <div class="city-label">لندن</div>
     </div>
 
-    <!-- الجمل التسويقية -->
-    <div class="container marketing-box">
-      <div class="marketing-item">
-        <img src="icon1.png" alt="Icon 1">
-        <div class="marketing-text">
-          <h5>استكشف العالم من مكانك</h5>
-          <p>اكتشف أفضل المدن السياحية والفنادق والمطاعم المختارة بعناية من كل قارة.</p>
+    <!-- طوكيو -->
+    <div class="col-4">
+      <div class="clock-circle" id="clock-tokyo">
+        <div class="number">
+          <span style="top:10%; left:50%;">12</span>
+          <span style="top:20%; left:75%;">1</span>
+          <span style="top:35%; left:90%;">2</span>
+          <span style="top:50%; left:95%;">3</span>
+          <span style="top:65%; left:90%;">4</span>
+          <span style="top:80%; left:75%;">5</span>
+          <span style="top:90%; left:50%;">6</span>
+          <span style="top:80%; left:25%;">7</span>
+          <span style="top:65%; left:10%;">8</span>
+          <span style="top:50%; left:5%;">9</span>
+          <span style="top:35%; left:10%;">10</span>
+          <span style="top:20%; left:25%;">11</span>
         </div>
+        <div class="hand hour" id="hour-tokyo"></div>
+        <div class="hand minute" id="minute-tokyo"></div>
+        <div class="hand second" id="second-tokyo"></div>
       </div>
-
-      <div class="marketing-item">
-        <img src="icon2.png" alt="Icon 2">
-        <div class="marketing-text">
-          <h5>سافر بعقلك أولاً… ثم قرر!</h5>
-          <p>شاهد صور الوجهات، تعرف على أبرز المعالم، وتصفح تقييمات الفنادق والمطاعم بدون عناء.</p>
-        </div>
-      </div>
-
-      <div class="marketing-item">
-        <img src="icon3.png" alt="Icon 3">
-        <div class="marketing-text">
-          <h5>كل ما تحتاجه قبل السفر</h5>
-          <p>دليلك الكامل لأجمل الوجهات، مع معلومات مفصلة تساعدك في التخطيط لرحلتك بثقة.</p>
-        </div>
-      </div>
+      <div class="city-label">طوكيو</div>
     </div>
+
+    <!-- الرياض -->
+    <div class="col-4">
+      <div class="clock-circle" id="clock-riyadh">
+        <div class="number">
+          <span style="top:10%; left:50%;">12</span>
+          <span style="top:20%; left:75%;">1</span>
+          <span style="top:35%; left:90%;">2</span>
+          <span style="top:50%; left:95%;">3</span>
+          <span style="top:65%; left:90%;">4</span>
+          <span style="top:80%; left:75%;">5</span>
+          <span style="top:90%; left:50%;">6</span>
+          <span style="top:80%; left:25%;">7</span>
+          <span style="top:65%; left:10%;">8</span>
+          <span style="top:50%; left:5%;">9</span>
+          <span style="top:35%; left:10%;">10</span>
+          <span style="top:20%; left:25%;">11</span>
+        </div>
+        <div class="hand hour" id="hour-riyadh"></div>
+        <div class="hand minute" id="minute-riyadh"></div>
+        <div class="hand second" id="second-riyadh"></div>
+      </div>
+      <div class="city-label">الرياض</div>
+    </div>
+  </div>
+</div>
+
+<!-- مربع الجمل التسويقية -->
+<div class="container marketing-box" style="background-color: #fdf6e3; border-radius: 16px; padding: 30px;">
+  <div class="marketing-item d-flex align-items-start mb-4">
+    <img src="icon1.png" alt="Icon 1" class="ms-3" style="width: 40px;">
+    <div>
+      <h5 style="font-size: 1.6rem;">استكشف العالم من مكانك</h5>
+      <p>اكتشف أفضل المدن السياحية والفنادق والمطاعم المختارة بعناية من كل قارة.</p>
+    </div>
+  </div>
+
+  <div class="marketing-item d-flex align-items-start mb-4">
+    <img src="icon2.png" alt="Icon 2" class="ms-3" style="width: 40px;">
+    <div>
+      <h5 style="font-size: 1.6rem;">سافر بعقلك أولاً... ثم قرر!</h5>
+      <p>شاهد صور الوجهات، تعرف على أبرز المعالم، وتصفح تقييمات الفنادق والمطاعم بدون عناء.</p>
+    </div>
+  </div>
+
+  <div class="marketing-item d-flex align-items-start">
+    <img src="icon3.png" alt="Icon 3" class="ms-3" style="width: 40px;">
+    <div>
+      <h5 style="font-size: 1.6rem;">كل ما تحتاجه قبل السفر</h5>
+      <p>دليلك الكامل لأجمل الوجهات، مع معلومات مفصلة تساعدك في التخطيط لرحلتك بثقة.</p>
+    </div>
+  </div>
+</div>
 
     <!-- الوجهات -->
     <div class="container destinations">
