--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       display: flex;
       flex-direction: column;
       font-family: 'Cairo', sans-serif;
+      background: #f5f5f5;
       direction: rtl;
       color: #000;
     }
