--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
     /* مربع الجمل التسويقية */
     .marketing-box {
-      background-color: #fdf6e3;
+      background-color: #9E6FA9;
       padding: 30px 20px;
       margin: 30px auto;
       border-radius: 16px;
