--- a/index.html
+++ b/index.html
@@ -287,21 +287,21 @@
 
 <div class="marketing-box">
   <div class="marketing-feature">
-    <img src="icons/1.svg" class="icon">
+    <img src="icon1.png" class="icon">
     <div class="text">
       <h5>استكشف العالم من مكانك</h5>
       <p>اكتشف أفضل المدن السياحية والفنادق والمطاعم المختارة بعناية من كل قارة.</p>
     </div>
   </div>
   <div class="marketing-feature">
-    <img src="icons/2.svg" class="icon">
+    <img src="icon2.png" class="icon">
     <div class="text">
       <h5>سافر بعقلك أولاً... ثم قرر!</h5>
       <p>شاهد صور الوجهات، تعرف على أبرز المعالم، وتصفح تقييمات الفنادق والمطاعم بدون عناء.</p>
     </div>
   </div>
   <div class="marketing-feature">
-    <img src="icons/3.svg" class="icon">
+    <img src="icon3.png" class="icon">
     <div class="text">
       <h5>كل ما تحتاجه قبل السفر</h5>
       <p>دليلك الكامل لأجمل الوجهات، مع معلومات مفصلة تساعدك في التخطيط لرحلتك بثقة.</p>
