--- a/index.html
+++ b/index.html
@@ -161,6 +161,9 @@
   display: flex;
   align-items: flex-start;
   margin-bottom: 25px;
+  padding: 20px 24px; /* يمنع ملامسة النص للحواف */
+  line-height: 1.9;
+  word-break: break-word;
 }
 
 .marketing-feature .icon {
@@ -291,21 +294,21 @@
     <img src="icon1.png" class="icon">
     <div class="text">
       <h5>استكشف العالم من مكانك</h5>
-      <p>اكتشف أفضل المدن السياحية والفنادق والمطاعم المختارة بعناية من كل قارة.</p>
+      <p>اكتشف أفضل المدن السياحية والفنادق والمطاعم المختارة بعناية من كل <br>قارة.</p>
     </div>
   </div>
   <div class="marketing-feature">
     <img src="icon2.png" class="icon">
     <div class="text">
       <h5>سافر بعقلك أولاً... ثم قرر!</h5>
-      <p>شاهد صور الوجهات، تعرف على أبرز المعالم، وتصفح تقييمات الفنادق والمطاعم بدون عناء.</p>
+      ‏<p>شاهد صور الوجهات، تعرف على أبرز المعالم، وتصفح تقييمات الفنادق والمطاعم بدون <br>عناء.</p>
     </div>
   </div>
   <div class="marketing-feature">
     <img src="icon3.png" class="icon">
     <div class="text">
       <h5>كل ما تحتاجه قبل السفر</h5>
-      <p>دليلك الكامل لأجمل الوجهات، مع معلومات مفصلة تساعدك في التخطيط لرحلتك بثقة.</p>
+      ‏<p>دليلك الكامل لأجمل الوجهات، مع معلومات مفصلة تساعدك في التخطيط لرحلتك <br>بثقة.</p>
     </div>
   </div>
 </div>
