--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
   align-items: flex-start;
   margin-bottom: 25px;
   padding: 20px 24px; /* يمنع ملامسة النص للحواف */
+  padding-left: 32px;
   line-height: 1.9;
   word-break: break-word;
 }
@@ -294,21 +295,21 @@
     <img src="icon1.png" class="icon">
     <div class="text">
       <h5>استكشف العالم من مكانك</h5>
-      <p>اكتشف أفضل المدن السياحية والفنادق والمطاعم المختارة بعناية من كل <br>قارة.</p>
+      <p>اكتشف أفضل المدن السياحية والفنادق والمطاعم المختارة بعناية من كل قارة.</p>
     </div>
   </div>
   <div class="marketing-feature">
     <img src="icon2.png" class="icon">
     <div class="text">
       <h5>سافر بعقلك أولاً... ثم قرر!</h5>
-      ‏<p>شاهد صور الوجهات، تعرف على أبرز المعالم، وتصفح تقييمات الفنادق والمطاعم بدون <br>عناء.</p>
+      ‏<p>شاهد صور الوجهات، تعرف على أبرز المعالم، وتصفح تقييمات الفنادق والمطاعم بدون عناء.</p>
     </div>
   </div>
   <div class="marketing-feature">
     <img src="icon3.png" class="icon">
     <div class="text">
       <h5>كل ما تحتاجه قبل السفر</h5>
-      ‏<p>دليلك الكامل لأجمل الوجهات، مع معلومات مفصلة تساعدك في التخطيط لرحلتك <br>بثقة.</p>
+      ‏<p>دليلك الكامل لأجمل الوجهات، مع معلومات مفصلة تساعدك في التخطيط لرحلتك بثقة.</p>
     </div>
   </div>
 </div>
